@@ -145,11 +145,11 @@ Groups@Google: "Rhino, enum.js, JavaAdapter?"</a> by Norris Boyd in the newsgrou
     specific jar files.
   </p>
   <p>
-    <b>NB:</b> This classpath cannot (currently) be used to
+    <b>NB: (Since Ant 1.7.1)</b>
+    This classpath <em>can</em> be used to
     specify the location of
-    the BSF jar file. Also, due to classloading issues, languages
-    that have engines in the BSF jar file cannot have the
-    implementation in the classpath element. This includes the
+    the BSF jar file and/or languages
+    that have engines in the BSF jar file. This includes the
     javascript, jython, netrexx and jacl languages.
   </p>
 </p>
